* make mark&sweep the default