@@ -16,4 +16,4 @@ fi
 
 LOCALCLASSPATH=`echo ./lib/junit.jar | tr ' ' ':'` 
 
-CLASSPATH=${LOCALCLASSPATH} ant $*
+CLASSPATH=${LOCALCLASSPATH} ANT_OPTS="-XX:PermSize=128m -XX:MaxPermSize=128m" ant $*
